--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
 </head>
 <body>
     <h2>este es mi sitio web personal</h2>
+
+    <p>soy un parrafo</p>
+
+    <h3>este es el titulo para ricardo</h3>
     
 </body>
 </html>
